// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`manifest codegen and content-hash caching > defaults AppContext to {} when src/taser.ts does not exist 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import route_0 from "../routes/index.get.js";

export type LayoutTree = {

};

export const layoutManifest = {

} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/": {
      GET: {
        layouts: [],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/";

export type LayoutHierarchy = {

};

export type RouteByPathMethod = {
    "/": {
      GET: {
        layouts: readonly [];
      };
    };
};

export type AppContext = {};

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > emits unified routes.gen.ts extracting AppContext from src/taser.ts and compiles inverted app 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp } from "@taserjs/runtime";
import taser from "../taser.js";
import layout_0 from "../routes/$.js";
import route_0 from "../routes/users.get.js";

export type LayoutTree = {
  "/*": typeof layout_0;
};

export const layoutManifest = {
    "/*": layout_0,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/users": {
      GET: {
        layouts: ["/*"],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest, taser);
export default app;
export const createApp = (overrideTaser?: typeof taser) =>
  createTaserApp(routeManifest, overrideTaser ?? taser);

export type RoutePath = "/users";

export type LayoutHierarchy = {
  "/*": readonly [];
};

export type RouteByPathMethod = {
    "/users": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
};

export type AppContext = typeof taser.$Infer.Context;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > filters layout chains and emits clean layout arrays in routeManifest and RouteByPathMethod for breakout routes 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import layout_0 from "../routes/$.js";
import layout_1 from "../routes/_auth.js";
import layout_2 from "../routes/posts/$id.js";
import layout_3 from "../routes/posts.js";
import layout_4 from "../routes/tasks/$.js";
import layout_5 from "../routes/tasks/$id.js";
import route_0 from "../routes/_auth/posts_.$id.get.js";
import route_1 from "../routes/health_.get.js";
import route_2 from "../routes/index_.get.js";
import route_3 from "../routes/posts/index_.get.js";
import route_4 from "../routes/posts_.$id.preview.get.js";
import route_5 from "../routes/posts_.$id.sub.get.js";
import route_6 from "../routes/tasks/$id_.complete.patch.js";
import route_7 from "../routes/unknown_.$id.get.js";

export type LayoutTree = {
  "/*": typeof layout_0;
  "/_auth/*": typeof layout_1;
  "/posts/:id/*": typeof layout_2;
  "/posts/*": typeof layout_3;
  "/tasks/*": typeof layout_4;
  "/tasks/:id/*": typeof layout_5;
};

export const layoutManifest = {
    "/*": layout_0,
    "/_auth/*": layout_1,
    "/posts/:id/*": layout_2,
    "/posts/*": layout_3,
    "/tasks/*": layout_4,
    "/tasks/:id/*": layout_5,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/posts/:id": {
      GET: {
        layouts: ["/*", "/_auth/*"],
        route: route_0,
      },
    },
    "/health": {
      GET: {
        layouts: [],
        route: route_1,
      },
    },
    "/": {
      GET: {
        layouts: [],
        route: route_2,
      },
    },
    "/posts": {
      GET: {
        layouts: ["/*"],
        route: route_3,
      },
    },
    "/posts/:id/preview": {
      GET: {
        layouts: ["/*"],
        route: route_4,
      },
    },
    "/posts/:id/sub": {
      GET: {
        layouts: ["/*"],
        route: route_5,
      },
    },
    "/tasks/:id/complete": {
      PATCH: {
        layouts: ["/*", "/tasks/*"],
        route: route_6,
      },
    },
    "/unknown/:id": {
      GET: {
        layouts: ["/*"],
        route: route_7,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/posts/:id" | "/health" | "/" | "/posts" | "/posts/:id/preview" | "/posts/:id/sub" | "/tasks/:id/complete" | "/unknown/:id";

export type LayoutHierarchy = {
  "/*": readonly [];
  "/_auth/*": readonly ["/*"];
  "/posts/:id/*": readonly ["/*", "/posts/*"];
  "/posts/*": readonly ["/*"];
  "/tasks/*": readonly ["/*"];
  "/tasks/:id/*": readonly ["/*", "/tasks/*"];
};

export type RouteByPathMethod = {
    "/posts/:id": {
      GET: {
        layouts: readonly ["/*", "/_auth/*"];
      };
    };
    "/health": {
      GET: {
        layouts: readonly [];
      };
    };
    "/": {
      GET: {
        layouts: readonly [];
      };
    };
    "/posts": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
    "/posts/:id/preview": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
    "/posts/:id/sub": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
    "/tasks/:id/complete": {
      PATCH: {
        layouts: readonly ["/*", "/tasks/*"];
      };
    };
    "/unknown/:id": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
};

export type AppContext = {};

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > generates static route manifest with top-level imports and canonical Hono keys 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import layout_0 from "../routes/$.js";
import layout_1 from "../routes/admin/$.js";
import route_0 from "../routes/admin/index.get.js";
import route_1 from "../routes/admin/users.$id.get.js";
import route_2 from "../routes/index.get.js";

export type LayoutTree = {
  "/*": typeof layout_0;
  "/admin/*": typeof layout_1;
};

export const layoutManifest = {
    "/*": layout_0,
    "/admin/*": layout_1,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/admin": {
      GET: {
        layouts: ["/*", "/admin/*"],
        route: route_0,
      },
    },
    "/admin/users/:id": {
      GET: {
        layouts: ["/*", "/admin/*"],
        route: route_1,
      },
    },
    "/": {
      GET: {
        layouts: ["/*"],
        route: route_2,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/admin" | "/admin/users/:id" | "/";

export type LayoutHierarchy = {
  "/*": readonly [];
  "/admin/*": readonly ["/*"];
};

export type RouteByPathMethod = {
    "/admin": {
      GET: {
        layouts: readonly ["/*", "/admin/*"];
      };
    };
    "/admin/users/:id": {
      GET: {
        layouts: readonly ["/*", "/admin/*"];
      };
    };
    "/": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
};

export type AppContext = {};

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > handles pathless segment layouts correctly 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import layout_0 from "../routes/_auth.js";
import route_0 from "../routes/_auth/login.post.js";

export type LayoutTree = {
  "/_auth/*": typeof layout_0;
};

export const layoutManifest = {
    "/_auth/*": layout_0,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/login": {
      POST: {
        layouts: ["/_auth/*"],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/login";

export type LayoutHierarchy = {
  "/_auth/*": readonly [];
};

export type RouteByPathMethod = {
    "/login": {
      POST: {
        layouts: readonly ["/_auth/*"];
      };
    };
};

export type AppContext = {};

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > supports single quote formatting option 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import route_0 from '../routes/index.get.js';

export type LayoutTree = {

};

export const layoutManifest = {

} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    '/': {
      GET: {
        layouts: [],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;
export type AppManifest = RouteManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = '/';

export type LayoutHierarchy = {

};

export type RouteByPathMethod = {
    '/': {
      GET: {
        layouts: readonly [];
      };
    };
};

export type AppContext = {};

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;
